--- a/a133/zh/auto-number-title.css
+++ b/a133/zh/auto-number-title.css
@@ -12,7 +12,7 @@ h2:before {
 h3:before {
   counter-increment: h3counter;
   content: counter(h2counter) "."
-            counter(h3counter) ".\0000a0\0000a0";
+            counter(h3counter) "\0000a0\0000a0";
 }
 h4:before {
   counter-increment: h4counter;
